src/Styles/ocean.css
.ocean-bg {
    background: #f5c2e7;
    overflow: hidden;
}

.ocean {
    height: 30%;
    width: 100%;
    position: absolute;
    bottom: 0;
    left: 0;
    background: #b4befe;
    z-index: -100;
}

/* TODO: Download this */
.wave {
    background: url(/wave.svg) repeat-x;
    position: absolute;
    top: -198px;
    width: 6400px;
    height: 198px;
    animation: wave 20s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
    transform: translate3d(0, 0, 0);
    z-index: -10;
}

.wave:nth-of-type(2) {
    top: -175px;
    animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.125s infinite,
        swell 7s ease -1.25s infinite;
    opacity: 1;
    z-index: -10;
}

@keyframes wave {
    0% {
        margin-left: 0;
    }
    100% {
        margin-left: -1600px;
    }
}

@keyframes swell {
    0%,
    100% {
        transform: translate3d(0, -25px, 0);
    }
    50% {
        transform: translate3d(0, 5px, 0);
    }
}

.mobile-bg {
    visibility: hidden;
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: -99;
    @apply bg-surface0;
}

@media (max-width: 32rem) {
    .mobile-bg {
        visibility: visible;
    }
}

